gobmkida/g0/gtp_reset_life_node_counter
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/gtp_reset_life_node_counter/src/interface/play_gtp.c:3230:22: error: use of undeclared identifier 'byte_4E1A32'
return gtp_success( &byte_4E1A32); 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/gtp_reset_life_node_counter/src/obj/2/play_gtp.o] Error 1
